[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"
[profile.release]
lto = true
debug = false
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_math = "0.7"
rand = {version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"